flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskdeployment
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: flask_app_with_ingress:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 1234
