flask-services.yml
apiVersion: v1
kind: Service
metadata:
  name: flaskservice
spec: 
  selector:
    app: flask
  ports: 
    - protocol: "TCP"
      port: 1234
      targetPort: 1234
  type: ClusterIP
