flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec: 
  rules:
    - http:
       paths:
         - backend:
             service:
               name: flaskservice
               port:
                 number: 1234
           path: /
           pathType: Prefix
